k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-store
  labels:
    name: movie-store
    app.kubernetes.io/name: movie-store
    app.kubernetes.io/part-of: movie-store-platform
